# shurl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: precommit-check.yml
docs/: building-the-model.md
shurl/: app.py  config.py  decoder.py  encoder.py  positional_embedding.py  shurl.py  utils.py
tests/: test_preprocessing.py  test_utils.py
