[tool.poetry]
name = "shurl"
version = "0.1.0"
description = ""
authors = ["Rutgers Open System Solutions <oss@oit.rutgers.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.3.3"
pymongo = "^4.7.2"
beautifulsoup4 = "^4.12.3"
colorama = "^0.4.6"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240523"
types-tensorflow = "^2.16.0.20240428"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 130

[tool.flake8]
max-line-length = 130
