[tool.poetry]
name = "shurl"
version = "0.1.0"
description = "Shrunk's artificial intelligence platform."
authors = ["Rutgers Open System Solutions <oss@oit.rutgers.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
flask = "^3.0.3"
transformers = "^4.41.2"
torch = "^2.3.1"
sentencepiece = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240523"
types-flask = "^1.1.6"
black = "^24.4.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 130

[tool.flake8]
max-line-length = 130
